<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_make_post"
        android:icon="@drawable/ic_house_hand_mortgage"
        android:title="@string/title_make_post" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_layers_black_24dp"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_credit"
        android:icon="@drawable/ic_credit_card_black_24dp"
        android:title="@string/title_payment" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

</menu>
